centered image and tagline

--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
 	<body>
-		<img src="jpp.png" alt="">
+		<div id="container"> 
+
+		<img id="logo" src="jpp.png" alt="">
 <h1>Coming soon... le wagon</h1>
-	</body>
+	</div>
+</body>
 	</html>
